# Supportops_agent

./: .gitignore  Dockerfile  Makefile  README.md  accounts.db  main.py  output.txt  output_real_test.txt  pyproject.toml  requirements-lock.txt  requirements.txt
.github/workflows/: ci.yml
app/: logging_utils.py  main.py  schemas.py  utils.py
app/db/: account_db.py  account_mongo.py  audit.py  audit_mongo.py  seed_db.py
app/graph/: diag_nodes.py  executor.py  flow.py  langgraph_adapter.py  langgraph_flow.py  nodes.py  safety.py
app/llm/: adapter.py  mock_llm.py
app/simulator/: diag_simulator.py
app/tools/: diag_tools.py  github_ticket_tool.py  ticket_tool.py
docs/: smoke_test_contract.md
frontend/: package-lock.json  vite.config.js
frontend/src/: App.jsx  index.css
scripts/: run_smoke_test.sh  smoke_test.py
tests/: test_decision_synthesis.py  test_diag_nodes.py  test_diag_tools.py  test_executor.py  test_executor_github.py  test_health.py  test_integration.py  test_mongo_integration.py  test_nodes.py  test_safety_gate.py
