[project]
name = "supportops-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.124.4",
    "ipykernel>=7.1.0",
    "langchain>=1.1.3",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.3",
    "langgraph>=1.0.5",
    "mongomock>=4.3.0",
    "openai>=2.11.0",
    "pygithub>=2.8.1",
    "pymongo>=4.15.5",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "setuptools>=80.9.0",
    "uvicorn>=0.38.0",
]
